# AUTOSAR_Xenomai_Skin

./: .gitignore  README.md  configure.ac
include/: Makefile.am
include/autosar/: Compiler.h  Makefile.am  Os_Cfg.h  Os_MemMap.h  Platform_Types.h  Rte_Type.h  Std_Types.h  os.h
include/rtdm/: Makefile.am  autosar.h
include/rtdm/uapi/: Makefile.am  autosar.h
kernel/drivers/: Kconfig  Makefile
kernel/drivers/autosar/: Kconfig  Makefile  gpio.c
lib/: Makefile.am
lib/autosar/: Dio.c  Dio.h  Makefile.am  init.c  os_alarm.c  os_alarm.h  os_application.h  os_appmode.h  os_counter.c  os_counter.h  os_event.c  os_event.h  os_hook.c  os_hook.h  os_isr.c  os_isr.h  os_os.c  os_os.h  os_resource.c  os_resource.h  os_scheduletable.h  os_spinlock.h  os_task.c  os_task.h  os_timer.c  os_timer.h  os_types.h
lib/autosar/HW/: Config.h
lib/autosar/app/: app_config.c  app_config.h  app_define.h  app_isr.c  app_isr.h  isr.h
lib/autosar/driver/: Dio.h  Port.h
scripts/: xeno-config-cobalt.in  xeno-config-mercury.in
test/: alarm-1.c  task-1.c  test_1_task_alarm.c  test_1_task_alarm.oil
test/alarms/alarm_1/: Makefile  alarm_1  alarm_1.arxml  alarm_1.c  os.h
test/alarms/alarm_2/: Makefile  alarm_2  alarm_2.arxml  alarm_2.c
test/alarms/alarm_3/: Makefile  alarm_3  alarm_3.c
test/alarms/alarm_4/: Makefile  alarm_4  alarm_4.arxml  alarm_4.c  os.h
test/errorhooks/hook_1/: Makefile  hook_1  hook_1.c
test/hooks/hook_1/: hook_1.arxml
test/resource/resource_1/: Makefile  resource_1  resource_1.c
test/resources/: Makefile
test/resources/resource_1/: resource_1  resource_1.arxml  resource_1.c
test/tasks/task_1/: Makefile  task_1  task_1.arxml  task_1.c
test/tasks/task_2/: Makefile  task_2  task_2.arxml  task_2.c
test/testAutosar/: Makefile  app_config.c  app_config.h  app_define.h  os.h  testAutosar  testAutosar.c
(+9 files in other folders)
