nodist_include_HEADERS=$(CONFIG_HEADER)

SUBDIRS = 		\
	boilerplate	\
	copperplate	\
	smokey		\
	autosar		\
	alchemy		\
	psos 		\
	trank		\
	vxworks		\
	xenomai

if XENO_COBALT
SUBDIRS += 		\
	cobalt 		\
	rtdm
else
SUBDIRS += mercury
endif

DIST_SUBDIRS = 		\
	alchemy		\
	autosar		\
	boilerplate	\
	cobalt 		\
	copperplate	\
	mercury		\
	psos 		\
	rtdm		\
	smokey		\
	trank		\
	vxworks		\
	xenomai
