SUBDIRS = boilerplate

if XENO_COBALT
SUBDIRS +=	\
	cobalt	\
	analogy	\
	trank
else
SUBDIRS += mercury
endif

SUBDIRS +=		\
	copperplate	\
	smokey		\
	autosar		\
	alchemy		\
	vxworks		\
	psos

DIST_SUBDIRS = 		\
	alchemy		\
	analogy		\
	autosar		\
	boilerplate	\
	cobalt		\
	copperplate	\
	mercury		\
	psos		\
	smokey		\
	trank		\
	vxworks
